<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nouvelle_commande"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_de_commande"
                android:layout_margin="10sp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:hintTextColor="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:startIconTint="@color/black"
                android:animateLayoutChanges="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newOrderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/black"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:drawableStart="@drawable/offer"
                    android:drawablePadding="5dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ville"
                android:layout_margin="10sp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:hintTextColor="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:startIconTint="@color/black"
                android:animateLayoutChanges="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newOrderCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/black"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:drawableStart="@drawable/city"
                    android:drawablePadding="5dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/l_adresse"
                android:layout_margin="10sp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:hintTextColor="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:startIconTint="@color/black"
                android:animateLayoutChanges="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newOrderAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/black"
                    android:textColor="@color/black"
                    android:lines="3"
                    android:inputType="text"
                    android:drawableStart="@drawable/street"
                    android:drawablePadding="5dp"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prix"
                    android:layout_margin="10sp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#000000"
                    app:hintTextColor="#000000"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:startIconTint="@color/black"
                    android:animateLayoutChanges="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newOrderPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/black"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:maxLength="7"
                        android:drawableStart="@drawable/money"
                        android:drawablePadding="5dp"
                        android:singleLine="true"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/quantit"
                    android:layout_margin="10sp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="#000000"
                    app:hintTextColor="#000000"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:startIconTint="@color/black"
                    android:animateLayoutChanges="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newOrderQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/black"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:maxLength="7"
                        android:drawableStart="@drawable/icon_count"
                        android:drawablePadding="5dp"
                        android:singleLine="true"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_ro"
                android:layout_margin="10sp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:hintTextColor="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:startIconTint="@color/black"
                android:animateLayoutChanges="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newOrderPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/black"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:drawableStart="@drawable/number"
                    android:drawablePadding="5dp"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/commentaire"
                android:layout_margin="10sp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:hintTextColor="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:startIconTint="@color/black"
                android:animateLayoutChanges="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newOrderNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/black"
                    android:textColor="@color/black"
                    android:lines="4"
                    android:inputType="text"
                    android:drawableStart="@drawable/note"
                    android:drawablePadding="5dp"
                    android:maxLength="50"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/newOrderBtnSend"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/envoyer"
                android:textStyle="bold"
                android:letterSpacing="0.15"
                android:fontFamily="@font/black"
                android:backgroundTint="#00796B"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>